--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<h1>
-  {{title}}
-</h1>
+<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+  <div class="container">
+    <a class="navbar-brand">{{title}}</a>
+    <ul class="nav navbar-nav" routerLinkActive="active">
+      <li class="nav-item"><a class="nav-link" routerLink="home">{{landing_page}}</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink={{civil_engineering}}>{{civil_engineering}}</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink="buiding_construction">{{buiding_construction}}</a></li>
+    </ul>
+  </div>
+</nav>
+<router-outlet></router-outlet>
