--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
   <div class="container">
     <a class="navbar-brand">{{title}}</a>
     <ul class="nav navbar-nav" routerLinkActive="active">
@@ -8,4 +8,8 @@
     </ul>
   </div>
 </nav>
-<router-outlet></router-outlet>
+<div class="cotainer"><router-outlet></router-outlet></div>
+<footer>
+  <p>© Company 2017</p>
+</footer>
+
