google map added new component map included

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,7 @@
     <ul class="nav navbar-nav" routerLinkActive="active">
       <li class="nav-item"><a class="nav-link" routerLink="home">{{landing_page}}</a></li>
       <li class="nav-item"><a class="nav-link" routerLink={{civil_engineering}}>{{civil_engineering}}</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink="buiding_construction">{{buiding_construction}}</a></li>
+      <li class="nav-item"><a class="nav-link" routerLink={{buiding_construction}}>{{buiding_construction}}</a></li>
     </ul>
   </div>
 </nav>
