--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,13 @@
-<nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-  <div class="container">
-    <a class="navbar-brand">{{title}}</a>
-    <ul class="nav navbar-nav" routerLinkActive="active">
-      <li class="nav-item"><a class="nav-link" routerLink="home">{{landing_page}}</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink={{civil_engineering}}>{{civil_engineering}}</a></li>
-      <li class="nav-item"><a class="nav-link" routerLink={{buiding_construction}}>{{buiding_construction}}</a></li>
-    </ul>
+<div class="container-fluid">
+  <app-navigation-bar></app-navigation-bar>
+
+
+  <div class="cotainer">
+    <router-outlet></router-outlet>
   </div>
-</nav>
-<div class="cotainer"><router-outlet></router-outlet></div>
-<footer>
-  <p>© Company 2017</p>
-</footer>
+
+  <footer>
+    <p>© wo gebaut wird da sind wir2017</p>
+  </footer>
+</div>
 
