--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,23 +1,38 @@
-<ngb-carousel>
-  <ng-template ngbSlide>
-    <img src="https://lorempixel.com/900/500?r=1" alt="Random first slide">
-    <div class="carousel-caption">
-      <h3>10 seconds between slides...</h3>
-      <p>This carousel uses customized default values.</p>
+<div id="carouselId" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselId" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselId" data-slide-to="1"></li>
+    <li data-target="#carouselId" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner" role="listbox">
+    <div class="carousel-item active">
+      <img src="https://lorempixel.com/450/250/city?r=0" alt="First slide">
+      <div class="carousel-caption">
+        <h3>Title</h3>
+        <p>Description</p>
+      </div>
     </div>
-  </ng-template>
-  <ng-template ngbSlide>
-    <img src="https://lorempixel.com/900/500?r=2"  alt="Random second slide">
-    <div class="carousel-caption">
-      <h3>No keyboard...</h3>
-      <p>This carousel uses customized default values.</p>
+    <div class="carousel-item">
+      <img src="https://lorempixel.com/450/250/city?r=1" alt="Second slide">
+      <div class="carousel-caption">
+        <h3>Title</h3>
+        <p>Description</p>
+      </div>
     </div>
-  </ng-template>
-  <ng-template ngbSlide>
-    <img src="https://lorempixel.com/900/500?r=3" alt="Random third slide">
-    <div class="carousel-caption">
-      <h3>And no wrap after last slide.</h3>
-      <p>This carousel uses customized default values.</p>
+    <div class="carousel-item">
+      <img src="https://lorempixel.com/450/250/city?r=2" alt="Third slide">
+      <div class="carousel-caption">
+        <h3>Title</h3>
+        <p>Description</p>
+      </div>
     </div>
-  </ng-template>
-</ngb-carousel>
+  </div>
+  <a class="carousel-control-prev" href="#carouselId" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselId" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
