--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -6,21 +6,21 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="carousel-item active">
-      <img src="https://lorempixel.com/450/250/city?r=0" alt="First slide">
+      <img src="http://192.168.99.101/image/baustelle_1.jpg" alt="First slide">
       <div class="carousel-caption">
         <h3>Title</h3>
         <p>Description</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://lorempixel.com/450/250/city?r=1" alt="Second slide">
+      <img src="http://192.168.99.101/image/baustelle_2.jpg" alt="Second slide">
       <div class="carousel-caption">
         <h3>Title</h3>
         <p>Description</p>
       </div>
     </div>
     <div class="carousel-item">
-      <img src="https://lorempixel.com/450/250/city?r=2" alt="Third slide">
+      <img src="http://192.168.99.101/image/baustelle_3.jpg" alt="Third slide">
       <div class="carousel-caption">
         <h3>Title</h3>
         <p>Description</p>
